<resources>
    <string name="app_name">Just Java</string>
    <string name="quantityText">Quantity</string>
    <string name="quantity_text_view">0</string>
    <string name="orderButton">Order</string>
    <string name="priceView">Price</string>
    <string name="price_text_view">$0</string>
    <string name="decrementButton">-</string>
    <string name="incrementButton">+</string>
</resources>
