<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#488BCC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/quantityText"
        android:textAllCaps="true"
        android:textColor="#1A004C"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:onClick="increment"
        android:text="@string/incrementButton"
        android:textColor="#57007F"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginLeft="93dp"
        android:text="@string/quantity_text_view"
        android:textColor="#1A004C"
        android:textSize="35sp"
        android:textStyle="normal"
        android:layout_marginStart="93dp" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:onClick="decrement"
        android:text="@string/decrementButton"
        android:textColor="#57007F"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/priceView"
        android:textAllCaps="true"
        android:textColor="#1A004C"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="93dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_text_view"
        android:textColor="#1A004C"
        android:textSize="35sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:onClick="submitOrder"
        android:text="@string/orderButton"
        android:textColor="#57007F"
        android:textSize="24sp"
        android:layout_marginStart="32dp" />

  

</LinearLayout>